--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,8 +13,7 @@ pipeline {
                 checkout([$class: "GitSCM",
                 branches: [[ "origin/master"]],
                 userRemoteConfigs: [[
-                    url: "https://github.com/dineshpyprogram/pipeline-trigger-pollscm.git"
-                ]]])
+                    url: "https://github.com/dineshpyprogram/pipeline-trigger-pollscm.git"]]])
             }
         }
     }
